--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RentraPro</title>
 
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./style/mystyle.css">
 
@@ -19,78 +21,242 @@
     <style>
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: white;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
+            background-color: #f8f9fa;
             margin: 0;
+            padding: 0;
         }
 
-        .font-archivo {
-            font-family: 'Archivo', sans-serif;
+        .navbar {
+            background-color: #ffffff;
+            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
+        }
+
+        .navbar-brand img {
+            max-width: 100%;
+            height: auto;
         }
 
         .main-content {
-            flex: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 100px 0; /* Padding di atas dan bawah main content */
-        }
-
-        .container-content {
-            margin-top: 50px; /* Margin untuk menggeser container ke bawah */
+            width: 100%;
+            padding: 100px 0;
+            top: 50;
+            text-align: left;
+            background-color: #f8f9fa;
         }
 
         .features-content {
             padding: 50px 0;
-            background-color: #f8f9fa; /* Warna latar belakang untuk bagian features */
+            background-color: #f8f9fa;
         }
 
-        .features-content .row {
-            justify-content: center;
+        .features-content h1 {
+            text-align: left;
         }
 
-        .features-content .col-6 {
-            display: flex;
-            align-items: center;
-            margin-bottom: 30px; /* Margin bawah antar konten */
+        .features-content h3 {
+            text-align: left;
         }
 
-        .features-content h1, 
-        .features-content h3, 
         .features-content p {
-            text-align: left; /* Teks rata kiri */
+            text-align: left;
+            color: #555555;
+        }
+
+        .container-content {
+            padding: 100px 0;
+            background-color: white;
+            text-align: center;
+        }
+
+        .container-content h1 {
+            font-size: 2.5rem;
+            font-weight: bold;
+            margin-bottom: 30px;
+        }
+
+        .box {
+            border: 1px solid #cccccc;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 8px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            height: 300px;
+        }
+
+        .box h3 {
+            font-size: 1.5rem;
+            font-weight: bold;
+            margin-bottom: 15px;
+        }
+
+        .box p {
+            font-size: 1.1rem;
+            color: #555555;
+        }
+
+        .B-content {
+            padding: 100px 0;
+            background-color: white;
+        }
+
+        .B-content h1 {
+            text-align: left;
+        }
+
+        .B-content p {
+            text-align: left;
+        }
+
+        .B-content h4 {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .B-content .btn {
+            margin-top: 20px;
+        }
+
+        .A-content {
+            margin-bottom: 30px;
+            background-color: white;
+            text-align: center;
+        }
+
+        .testimonial-content {
+            padding: 100px 0;
+            margin-bottom: 30px;
+            background-color: #f8f9fa;
+        }
+
+        .wrapper {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Setiap kotak memiliki lebar minimum 300px */
+            gap: 3rem;
+        }
+
+        .testimonial-item {
+            .testimonial-item {
+    min-width: 250px; /* Atur lebar minimum kotak testimonial */
+    max-width: 350px; /* Atur lebar maksimum kotak testimonial */
+    border: 3px solid rgba(0, 0, 0, 0.2);
+    border-radius: 2rem;
+    margin: 0 1rem; /* Atur margin antar kotak testimonial */
+    padding: 20px 40px; /* Atur padding dalam kotak testimonial */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 1.5rem;
+    color: #555555;
+    transition: 0.4s ease-in-out;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+        }
+
+        .testimonial-box img {
+            width: 15rem;
+            border-radius: 50%;
+            border: 3px solid #555555;
+            box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Adjustments for testimonials */
+        .testimonial-item {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            padding: 20px;
+            margin: 20px;
+            border-radius: 10px;
+            background: #ffffff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .testimonial-item img {
+            width: 120px;
+            height: 120px;
+            object-fit: cover;
+            border-radius: 50%;
+            margin-bottom: 20px;
+        }
+
+        .testimonial-item p {
+            font-size: 1.1rem;
+            color: #555555;
+        }
+
+        .socialmedia-content {
+    padding: 100px 0;
+    margin-bottom: 30px;
+    background-color: white;
+    text-align: center; /* Center text for the social media content */
+}
+
+.socialmedia-content h4, .socialmedia-content h3 {
+    text-align: center;
+    margin-bottom: 10px; /* Additional margin if needed */
+}
+
+.socialmedia-content .social-icons {
+    text-align: center;
+    margin-top: 20px; /* Add margin top to space out from the text */
+}
+
+.socialmedia-content .social-icons i {
+    font-size: 3rem; /* Adjust font size as needed */
+    margin: 0 15px; /* Margin between icons */
+    display: inline-block; /* Ensure icons are inline-block */
+}
+
+
+        .contact-content{
+            background-color: #f8f9fa;
+            text-align: left;
+        }
+        
+
+        .footer{
+            background-color: #413d3d;
+            color: white;
+        }
+
+        .footer h1{
+            text-align: center;
         }
     </style>
 </head>
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg bg-transparent">
+<nav class="navbar navbar-expand-lg">
     <div class="container">
         <a class="navbar-brand" href="#">
-            <img src="./assets/icon/logo.png" alt="logo" style="width: 130px;">
+            <img src="./assets/icon/logo.png" alt="logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto gap-4 font-poppins" style="transform: translateY(10px);">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active fw-medium" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Why Us</a>
+                    <a class="nav-link active" aria-current="page" href="#home">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#features">Features</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Testimoni</a>
+                    <a class="nav-link" href="#testimonial">Testimonial</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="#contact">Contact</a>
                 </li>
             </ul>
         </div>
@@ -99,27 +265,50 @@
 <!-- Navbar end-->
 
 <!-- Main content -->
-<div class="main-content">
-    <div class="container font-poppins">
+<div id="home" class="main-content">
+    <div class="container">
         <div class="row">
-            <div class="col-md-6 d-flex align-items-center">
-                <div>
-                    <h1 class="fs-1 fw-bold">
-                        Selamat Datang di RentaPro 
-                    </h1>
-                    <h3 class="fs-4 fw-medium">
-                        Solusi Manajemen Rental Mobil yang Efisien
-                    </h3>
-                    <p style="color: #555555">
-                        RentaPro adalah platform SaaS yang dirancang khusus untuk mengelola bisnis rental mobil 
-                        Anda dengan lebih efisien dan efektif. Dengan fitur-fitur unggulan kami, Anda dapat 
-                        meningkatkan produktivitas dan profitabilitas bisnis rental mobil Anda.
-                    </p>
-                    <button class="btn btn-primary px-4 py-2">Contact</button>
+            <div class="col-md-6">
+                <h1 class="fs-1 fw-bold">
+                    Selamat Datang di RentraPro
+                </h1>
+                <h3 class="fs-4 fw-medium">
+                    Solusi Manajemen Rental Mobil yang Efisien
+                </h3>
+                <p>
+                    RentaPro adalah platform SaaS yang dirancang khusus untuk mengelola bisnis rental mobil Anda dengan lebih efisien dan efektif. Dengan fitur-fitur unggulan kami, Anda dapat meningkatkan produktivitas dan profitabilitas bisnis rental mobil Anda.
+                </p>
+                <button class="btn btn-primary px-4 py-2">Contact</button>
+            </div>
+            <div class="col-md-6">
+                <img src="./assets/img/mobil.png" alt="mobil" class="img-fluid">
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Container content -->
+<div class="container-content">
+    <div class="container">
+        <h1 class="fs-1 fw-bold">Mengapa Memilih RentraPro?</h1>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="box">
+                    <h3 class="fs-3 fw-bold">Manajemen Armada yang Efisien</h3>
+                    <p>Kelola armada mobil Anda dengan mudah dan efisien, melacak status, perawatan, dan ketersediaan mobil dalam satu platform terintegrasi.</p>
                 </div>
             </div>
-            <div class="col-md-6 text-md-end">
-                <img src="./assets/img/mobil.png" alt="mobil" style="max-width: 100%;" width="500px">
+            <div class="col-md-4">
+                <div class="box">
+                    <h3 class="fs-3 fw-bold">Pendataan Transaksi yang Lengkap</h3>
+                    <p>Catat semua transaksi rental secara rapi dan teratur dengan detail yang akurat untuk memudahkan pelacakan penyewa, waktu sewa, dan informasi transaksi lainnya.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="box">
+                    <h3 class="fs-3 fw-bold">Laporan Keuangan yang Akurat</h3>
+                    <p>Dapatkan laporan keuangan yang lengkap dan akurat untuk memantau kinerja bisnis Anda, membantu dalam pengambilan keputusan yang lebih baik untuk pertumbuhan bisnis Anda.</p>
+                </div>
             </div>
         </div>
     </div>
@@ -160,39 +349,88 @@
     </div>
 </div>
 
-<div class="container container-content">
-    <div class="row">
-        <div class="col-6">
-            <img src="./assets/img/mobil2.png" alt="Mobil 2" style="max-width: 100%;" width="500px">
-        </div>
-        <div class="col-6 d-flex align-items-center">
-            <div>
-                <h1 class="fs-1 fw-bold font-poppins">
-                    Why Us
-                </h1>
-                <h3 class="fs-4 fw-medium font-poppins">
-                     - Manajemen Armada yang Efisien
-                </h3>
-                <p style="color: #555555">
-                    Kelola armada mobil Anda dengan mudah dan efisien, melacak status, perawatan, dan ketersediaan mobil dalam satu platform terintegrasi.
-                </p>
-                <h3 class="fs-4 fw-medium font-poppins">
-                    - Pendataan Transaksi yang Lengkap 
-               </h3>
-               <p style="color: #555555">
-                Catat semua transaksi rental secara rapi dan teratur dengan detail yang akurat untuk memudahkan pelacakan penyewa, waktu sewa, dan informasi transaksi lainnya. 
-               </p>
-               <h3 class="fs-4 fw-medium font-poppins">
-                - Laporan Keuangan yang Akurat 
-           </h3>
-           <p style="color: #555555">
-            Dapatkan laporan keuangan yang lengkap dan akurat untuk memantau kinerja bisnis Anda, membantu dalam pengambilan keputusan yang lebih baik untuk pertumbuhan bisnis Anda.    
-           </p>
+<!-- Bergabung -->
+<div class="B-content">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h1 class="fs-1 fw-bold">Bergabunglah dengan Ribu Bisnis yang Telah Sukses dengan RentaPro</h1>
+                <p>Ribu bisnis rental mobil di seluruh dunia telah memilih RentaPro sebagai solusi manajemen rental mereka. Apakah Anda siap untuk meningkatkan efisiensi dan profitabilitas bisnis Anda? Bergabunglah dengan RentaPro sekarang dan temukan kemudahan dalam mengelola bisnis rental mobil Anda!</p>
+            </div>
+            <div class="col-md-6">
+                <h1 class="fs-1 fw-bold">Dapatkan Akses Uji Coba Gratis Sekarang</h1>
+                <p>Mulailah perjalanan Anda menuju efisiensi bisnis yang lebih tinggi dengan RentaPro. Daftarkan diri Anda sekarang untuk mendapatkan akses uji coba gratis. Tidak perlu kartu kredit, tanpa risiko, dan tanpa kewajiban.</p>
             </div>
         </div>
     </div>
 </div>
-<!-- Main content end -->
+
+<!-- bergabung -->
+<div class="A-content">
+    <div class="container">
+        <div class="row">
+            <h4 class="fs-4 fw-bold">Bergabunglah dengan RentaPro hari ini dan rasakan perbedaannya!</h3>
+        </div>
+    </div>
+</div>
+
+<!-- Testimonial content -->
+<div id="testimonial" class="testimonial-content">
+    <div class="container">
+        <h1 class="fs-1 fw-bold">Testimonial</h1>
+        <div class="wrapper">
+            <div class="testimonial-item">
+                <img src="./assets/img/person.jpeg" alt="John Doe">
+                <h2 class="fs-2 fw-bold">John Doe</h2>
+                <h3 class="fs-4 fw-medium">Pemilik Rental Mobil XYZ</h3>
+                <p>"RentaPro telah mengubah cara kami mengelola bisnis rental mobil. Semuanya menjadi lebih mudah dan efisien!"</p>
+            </div>
+            <div class="testimonial-item">
+                <img src="./assets/img/person.jpeg" alt="Jane Smith">
+                <h2 class="fs-2 fw-bold">Jane Smith</h2>
+                <h3 class="fs-4 fw-medium">Manajer Operasional ABC Rentals</h3>
+                <p>"Laporan keuangan yang akurat dari RentaPro membantu kami membuat keputusan bisnis yang lebih baik. Kami sangat puas!"</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="socialmedia-content">
+    <div class="container">
+        <div class="row">
+            <h4 class="fs-4 fw-bold">Bergabunglah dengan Kami di Media Sosial</h3>
+                <h3 class="fs-4 fw-medium">Ikuti kami di media sosial untuk mendapatkan berita terbaru, pembaruan produk, dan tips 
+                    bisnis yang berguna.</h3>
+                <i class='bx bxl-facebook-circle'></i>
+                <i class='bx bxl-twitter'></i>
+                <i class='bx bxl-linkedin' ></i>
+        </div>
+    </div>
+</div>
+
+<div id="contact" class="contact-content">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+            <h4 class="fs-4 fw-bold">Hubungi Kami </h4>
+                <h3 class="fs-4 fw-medium">Alamat: Jl. Contoh No. 123, Jakarta, Indonesia  </h3>
+                <h3 class="fs-4 fw-medium">Telepon: +62 123 456 789</h3>  
+                <h3 class="fs-4 fw-medium">Email: info@rentaprodigital.com</h3>
+            </div>
+        </div>
+    </div>
+
+<!-- Footer -->
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h1 class="fs-5 fw-bold">RentaPro - Solusi Manajemen Rental Mobil Anda</h1>
+            </div>
+        </div>
+    </div>
+</footer>
+<!-- Footer end -->
 
 <!-- Bootstrap JS -->
 <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
